added deduplication and upload to huggingface

--- a/data_prep/ECE_students/student_google_doc_to_csv.ipynb
+++ b/data_prep/ECE_students/student_google_doc_to_csv.ipynb
@@ -917,11 +917,195 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Combine these new data with exsiting RLHF data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using custom data configuration kastan--rlhf-qa-conditional-generation-b460241f56d4b82e\n",
+      "Found cached dataset parquet (/home/kastanday/.cache/huggingface/datasets/kastan___parquet/kastan--rlhf-qa-conditional-generation-b460241f56d4b82e/0.0.0/2a3b91fbd88a2c90d1dbbb32b460cf621d31bd5b05b934492fdef7d8d6f236ec)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "79e701c761e847658a3c7e6738095671",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using custom data configuration default-4774890bfb2ddad7\n",
+      "Found cached dataset csv (/home/kastanday/.cache/huggingface/datasets/csv/default-4774890bfb2ddad7/0.0.0/6b34fb8fcf56f7c8ba51dc895bfa2bfbe43546f190a60fcf74bb5e8afdcc2317)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "689ef56dacc847e1bad2091ce84a6fe0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DatasetDict({\n",
+      "    train: Dataset({\n",
+      "        features: ['prompt', 'completion'],\n",
+      "        num_rows: 55\n",
+      "    })\n",
+      "})\n",
+      "DatasetDict({\n",
+      "    train: Dataset({\n",
+      "        features: ['prompt', 'completion'],\n",
+      "        num_rows: 69\n",
+      "    })\n",
+      "})\n"
+     ]
+    }
+   ],
+   "source": [
+    "import datasets\n",
+    "\n",
+    "existing_dataset = datasets.load_dataset(\"kastan/rlhf-qa-conditional-generation\")\n",
+    "new_dataset = datasets.load_dataset('csv', data_files='cleaned_student_written_QA.csv')\n",
+    "\n",
+    "print(existing_dataset)\n",
+    "print(new_dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Combined datasets (before dedup)\n",
+      " Dataset({\n",
+      "    features: ['prompt', 'completion'],\n",
+      "    num_rows: 124\n",
+      "})\n",
+      "Combined datasets (AFTER dedup)\n",
+      " Dataset({\n",
+      "    features: ['prompt', 'completion', '__index_level_0__'],\n",
+      "    num_rows: 113\n",
+      "})\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset = datasets.concatenate_datasets([existing_dataset['train'], new_dataset['train']])\n",
+    "print(\"Combined datasets (before dedup)\\n\",dataset)\n",
+    "\n",
+    "# remove duplicates\n",
+    "import pandas as pd\n",
+    "df = pd.DataFrame(dataset)\n",
+    "df.drop_duplicates(subset=['prompt', 'completion'], inplace=True)\n",
+    "dataset = datasets.Dataset.from_pandas(df)\n",
+    "print(\"Combined datasets (AFTER dedup)\\n\",dataset)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# push to hub"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "58497bd625d54b4985fe1f245f286ced",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Pushing dataset shards to the dataset hub:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "790b811ec9cf4384b0b4011039886937",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Creating parquet from Arrow format:   0%|          | 0/1 [00:00<?, ?ba/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4334c376c95b45d684f82c2aa3fbb9f5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Deleting unused files from dataset repository:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Updating downloaded metadata with the new split.\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset.push_to_hub(\"kastan/rlhf-qa-conditional-generation\")\n",
+    "\n",
+    "# usage:\n",
+    "# import datasets\n",
+    "# train_data = datasets.load_dataset(\"kastan/rlhf-qa-conditional-generation\", split='train')"
+   ]
   }
  ],
  "metadata": {
@@ -940,7 +1124,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.9.15"
   },
   "orig_nbformat": 4
  },
