added append_to_huggingface dataset and upload

--- a/data_prep/reformat_scale_to_binary_comparisons.ipynb
+++ b/data_prep/reformat_scale_to_binary_comparisons.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# This notebook creates binary comparisons dataset on huggingface\n",
+    "\n",
+    "see huggingface: `kastan/rlhf-qa-comparisons-binary`"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -9,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -13539,13 +13549,13 @@
        "    'fakeModelRetraining': False}]}]"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "input_path = '/home/sbdesai2/chatbotai/saish/rlhf/data_prep/ScaleAI_results_Version3_set2.json'\n",
+    "input_path = 'ScaleAI_results_Version3_set2.json'\n",
     "json_path = open(input_path)\n",
     "data = json.load(json_path)\n",
     "data"
@@ -13560,7 +13570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -13580,7 +13590,7 @@
        " 3: 'Essential hazards in a clocked synchronous design based on flip-flops can be detected by examining the state machine and determining if the next state of the machine depends on the current state. If so, an essential hazard exists, as a second rising clock edge moves the system into a second new state.'}"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -13624,7 +13634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13638,7 +13648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13707,7 +13717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13731,7 +13741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -13875,13 +13885,215 @@
        "[302 rows x 3 columns]"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# drop duplicates in place \n",
+    "data.drop_duplicates(subset = ['Question', 'Chosen', 'Rejected'], inplace = True) \n",
+    "\n",
+    "# save to csv\n",
+    "data.to_csv('ScaleAI_results_Version3_set2.csv', index = False)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# upload to huggingface"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using custom data configuration kastan--rlhf-qa-comparisons-b7d280fad49b6bda\n",
+      "Found cached dataset parquet (/home/kastanday/.cache/huggingface/datasets/kastan___parquet/kastan--rlhf-qa-comparisons-b7d280fad49b6bda/0.0.0/2a3b91fbd88a2c90d1dbbb32b460cf621d31bd5b05b934492fdef7d8d6f236ec)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3ba685dcdae044c99739fc2677cc7e0c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using custom data configuration default-35159bac834a5d53\n",
+      "Found cached dataset csv (/home/kastanday/.cache/huggingface/datasets/csv/default-35159bac834a5d53/0.0.0/6b34fb8fcf56f7c8ba51dc895bfa2bfbe43546f190a60fcf74bb5e8afdcc2317)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "96d7f74755e749649e239dfc3c9dedb8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DatasetDict({\n",
+      "    train: Dataset({\n",
+      "        features: ['Question', 'Chosen', 'Rejected'],\n",
+      "        num_rows: 41\n",
+      "    })\n",
+      "})\n",
+      "DatasetDict({\n",
+      "    train: Dataset({\n",
+      "        features: ['Question', 'Chosen', 'Rejected'],\n",
+      "        num_rows: 296\n",
+      "    })\n",
+      "})\n"
+     ]
+    }
+   ],
+   "source": [
+    "import datasets\n",
+    "\n",
+    "existing_dataset = datasets.load_dataset('kastan/rlhf-qa-comparisons')\n",
+    "new_dataset = datasets.load_dataset('csv', data_files='ScaleAI_results_Version3_set2.csv')\n",
+    "\n",
+    "print(existing_dataset)\n",
+    "print(new_dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Combined datasets (before dedup)\n",
+      " Dataset({\n",
+      "    features: ['Question', 'Chosen', 'Rejected'],\n",
+      "    num_rows: 337\n",
+      "})\n",
+      "Combined datasets (AFTER dedup)\n",
+      " Dataset({\n",
+      "    features: ['Question', 'Chosen', 'Rejected', '__index_level_0__'],\n",
+      "    num_rows: 337\n",
+      "})\n"
+     ]
+    }
+   ],
+   "source": [
+    "# combine\n",
+    "dataset = datasets.concatenate_datasets([existing_dataset['train'], new_dataset['train']])\n",
+    "print(\"Combined datasets (before dedup)\\n\",dataset)\n",
+    "\n",
+    "# remove duplicates\n",
+    "import pandas as pd\n",
+    "df = pd.DataFrame(dataset)\n",
+    "df.drop_duplicates(subset=['Question', 'Chosen', 'Rejected'], inplace=True)\n",
+    "dataset = datasets.Dataset.from_pandas(df)\n",
+    "print(\"Combined datasets (AFTER dedup)\\n\",dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cabc25cb9fb54c30b1ec46313dd8013e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Pushing dataset shards to the dataset hub:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "eac7a45329ad4ebd8de59221f4ceaebf",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Creating parquet from Arrow format:   0%|          | 0/1 [00:00<?, ?ba/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e9aba9f337bc49faa6c6c129aff94bf4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Deleting unused files from dataset repository:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Updating downloaded metadata with the new split.\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset.push_to_hub(\"kastan/rlhf-qa-comparisons\")"
    ]
   },
   {
@@ -13911,7 +14123,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.9.15"
   },
   "orig_nbformat": 4
  },
