--- a/data_prep/reformat_neha_qa_to_scale.ipynb
+++ b/data_prep/reformat_neha_qa_to_scale.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
        "[216 rows x 2 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
        "[216 rows x 2 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,29 +326,146 @@
     "\n",
     "# RUN IT\n",
     "rlhf_data = json_gen(df)\n",
-    "rlhf_data.to_csv('rlhf_v3_set2_for_upload_to_scale.csv', index=False)\n",
-    "rlhf_data"
+    "# rlhf_data.to_csv('for_scale_rlhf_Keywords_Set1.csv', index=False)\n",
+    "# rlhf_data"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Export to csv for upload to Scale.ai"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[11], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m rlhf_data \u001b[39m=\u001b[39m json_gen(df)\n",
-      "Cell \u001b[0;32mIn[10], line 12\u001b[0m, in \u001b[0;36mjson_gen\u001b[0;34m(df)\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[39mfor\u001b[39;00m quest, ans \u001b[39min\u001b[39;00m \u001b[39mzip\u001b[39m(df[\u001b[39m'\u001b[39m\u001b[39mquestion\u001b[39m\u001b[39m'\u001b[39m], df[\u001b[39m'\u001b[39m\u001b[39manswers\u001b[39m\u001b[39m'\u001b[39m]):\n\u001b[1;32m      8\u001b[0m     count \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m      9\u001b[0m     entry \u001b[39m=\u001b[39m [{\u001b[39m\"\u001b[39m\u001b[39mtype\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39mtext\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mcontent\u001b[39m\u001b[39m\"\u001b[39m: quest\u001b[39m.\u001b[39msplit(\u001b[39m\"\u001b[39m\u001b[39m?\u001b[39m\u001b[39m\"\u001b[39m)[\u001b[39m0\u001b[39m] \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m?\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m\"\u001b[39m  \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m#### Option 1\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m-------\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m\"\u001b[39m \u001b[39m+\u001b[39m  ans[\u001b[39m0\u001b[39m]\u001b[39m.\u001b[39mstrip()}, \n\u001b[1;32m     10\u001b[0m             {\u001b[39m\"\u001b[39m\u001b[39mtype\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39mtext\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mcontent\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39m#### Option 2\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m-------\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m\"\u001b[39m \u001b[39m+\u001b[39m  ans[\u001b[39m1\u001b[39m]\u001b[39m.\u001b[39mstrip()},\n\u001b[1;32m     11\u001b[0m             {\u001b[39m\"\u001b[39m\u001b[39mtype\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39mtext\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mcontent\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39m#### Option 3\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m-------\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m\"\u001b[39m \u001b[39m+\u001b[39m  ans[\u001b[39m2\u001b[39m]\u001b[39m.\u001b[39mstrip()},  \n\u001b[0;32m---> 12\u001b[0m             {\u001b[39m\"\u001b[39m\u001b[39mtype\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39mtext\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mcontent\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39m#### Option 4\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m-------\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m\"\u001b[39m \u001b[39m+\u001b[39m  ans[\u001b[39m3\u001b[39;49m]\u001b[39m.\u001b[39mstrip()}]\n\u001b[1;32m     13\u001b[0m     upload_entry\u001b[39m.\u001b[39mappend(json\u001b[39m.\u001b[39mdumps(entry, indent \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m))\n\u001b[1;32m     14\u001b[0m     meta_data\u001b[39m.\u001b[39mappend(json\u001b[39m.\u001b[39mdumps({\u001b[39m'\u001b[39m\u001b[39mid\u001b[39m\u001b[39m'\u001b[39m : count}, indent \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m))\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>attachments_json</th>\n",
+       "      <th>metadata</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>[\\n {\\n  \"type\": \"text\",\\n  \"content\": \"What i...</td>\n",
+       "      <td>{\\n \"id\": 1\\n}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>[\\n {\\n  \"type\": \"text\",\\n  \"content\": \"How ca...</td>\n",
+       "      <td>{\\n \"id\": 2\\n}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>[\\n {\\n  \"type\": \"text\",\\n  \"content\": \"What i...</td>\n",
+       "      <td>{\\n \"id\": 3\\n}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>[\\n {\\n  \"type\": \"text\",\\n  \"content\": \"How do...</td>\n",
+       "      <td>{\\n \"id\": 4\\n}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>[\\n {\\n  \"type\": \"text\",\\n  \"content\": \"What i...</td>\n",
+       "      <td>{\\n \"id\": 5\\n}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>[\\n {\\n  \"type\": \"text\",\\n  \"content\": \"Can yo...</td>\n",
+       "      <td>{\\n \"id\": 96\\n}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>[\\n {\\n  \"type\": \"text\",\\n  \"content\": \"What d...</td>\n",
+       "      <td>{\\n \"id\": 97\\n}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>[\\n {\\n  \"type\": \"text\",\\n  \"content\": \"Can yo...</td>\n",
+       "      <td>{\\n \"id\": 98\\n}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>[\\n {\\n  \"type\": \"text\",\\n  \"content\": \"What i...</td>\n",
+       "      <td>{\\n \"id\": 99\\n}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>[\\n {\\n  \"type\": \"text\",\\n  \"content\": \"How do...</td>\n",
+       "      <td>{\\n \"id\": 100\\n}</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                     attachments_json          metadata\n",
+       "0   [\\n {\\n  \"type\": \"text\",\\n  \"content\": \"What i...    {\\n \"id\": 1\\n}\n",
+       "1   [\\n {\\n  \"type\": \"text\",\\n  \"content\": \"How ca...    {\\n \"id\": 2\\n}\n",
+       "2   [\\n {\\n  \"type\": \"text\",\\n  \"content\": \"What i...    {\\n \"id\": 3\\n}\n",
+       "3   [\\n {\\n  \"type\": \"text\",\\n  \"content\": \"How do...    {\\n \"id\": 4\\n}\n",
+       "4   [\\n {\\n  \"type\": \"text\",\\n  \"content\": \"What i...    {\\n \"id\": 5\\n}\n",
+       "..                                                ...               ...\n",
+       "95  [\\n {\\n  \"type\": \"text\",\\n  \"content\": \"Can yo...   {\\n \"id\": 96\\n}\n",
+       "96  [\\n {\\n  \"type\": \"text\",\\n  \"content\": \"What d...   {\\n \"id\": 97\\n}\n",
+       "97  [\\n {\\n  \"type\": \"text\",\\n  \"content\": \"Can yo...   {\\n \"id\": 98\\n}\n",
+       "98  [\\n {\\n  \"type\": \"text\",\\n  \"content\": \"What i...   {\\n \"id\": 99\\n}\n",
+       "99  [\\n {\\n  \"type\": \"text\",\\n  \"content\": \"How do...  {\\n \"id\": 100\\n}\n",
+       "\n",
+       "[100 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "\n",
+    "\n",
+    "rlhf_data_short = rlhf_data.iloc[0:100]\n",
+    "rlhf_data_short.to_csv('0_to_100_for_scale_rlhf_Keywords_Set1.csv', index=False)\n",
+    "rlhf_data_short"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# huggingface dataset to Scale.AI"
+   ]
   },
   {
    "cell_type": "code",
@@ -588,175 +705,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "test_data = json_gen(test_dataframe)\n",
     "rlhf_data = json_gen(rlhf_dataframe)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>attachments_json</th>\n",
-       "      <th>metadata</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>[\\n {\\n  \"type\": \"text\",\\n  \"content\": \" What ...</td>\n",
-       "      <td>{\\n \"id\": 1\\n}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>[\\n {\\n  \"type\": \"text\",\\n  \"content\": \" What ...</td>\n",
-       "      <td>{\\n \"id\": 2\\n}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>[\\n {\\n  \"type\": \"text\",\\n  \"content\": \" What ...</td>\n",
-       "      <td>{\\n \"id\": 3\\n}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>[\\n {\\n  \"type\": \"text\",\\n  \"content\": \"What i...</td>\n",
-       "      <td>{\\n \"id\": 4\\n}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>[\\n {\\n  \"type\": \"text\",\\n  \"content\": \"What i...</td>\n",
-       "      <td>{\\n \"id\": 5\\n}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>175</th>\n",
-       "      <td>[\\n {\\n  \"type\": \"text\",\\n  \"content\": \"What d...</td>\n",
-       "      <td>{\\n \"id\": 176\\n}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>176</th>\n",
-       "      <td>[\\n {\\n  \"type\": \"text\",\\n  \"content\": \"What i...</td>\n",
-       "      <td>{\\n \"id\": 177\\n}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>177</th>\n",
-       "      <td>[\\n {\\n  \"type\": \"text\",\\n  \"content\": \" What ...</td>\n",
-       "      <td>{\\n \"id\": 178\\n}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>178</th>\n",
-       "      <td>[\\n {\\n  \"type\": \"text\",\\n  \"content\": \" What ...</td>\n",
-       "      <td>{\\n \"id\": 179\\n}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>179</th>\n",
-       "      <td>[\\n {\\n  \"type\": \"text\",\\n  \"content\": \" What ...</td>\n",
-       "      <td>{\\n \"id\": 180\\n}</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>180 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                      attachments_json          metadata\n",
-       "0    [\\n {\\n  \"type\": \"text\",\\n  \"content\": \" What ...    {\\n \"id\": 1\\n}\n",
-       "1    [\\n {\\n  \"type\": \"text\",\\n  \"content\": \" What ...    {\\n \"id\": 2\\n}\n",
-       "2    [\\n {\\n  \"type\": \"text\",\\n  \"content\": \" What ...    {\\n \"id\": 3\\n}\n",
-       "3    [\\n {\\n  \"type\": \"text\",\\n  \"content\": \"What i...    {\\n \"id\": 4\\n}\n",
-       "4    [\\n {\\n  \"type\": \"text\",\\n  \"content\": \"What i...    {\\n \"id\": 5\\n}\n",
-       "..                                                 ...               ...\n",
-       "175  [\\n {\\n  \"type\": \"text\",\\n  \"content\": \"What d...  {\\n \"id\": 176\\n}\n",
-       "176  [\\n {\\n  \"type\": \"text\",\\n  \"content\": \"What i...  {\\n \"id\": 177\\n}\n",
-       "177  [\\n {\\n  \"type\": \"text\",\\n  \"content\": \" What ...  {\\n \"id\": 178\\n}\n",
-       "178  [\\n {\\n  \"type\": \"text\",\\n  \"content\": \" What ...  {\\n \"id\": 179\\n}\n",
-       "179  [\\n {\\n  \"type\": \"text\",\\n  \"content\": \" What ...  {\\n \"id\": 180\\n}\n",
-       "\n",
-       "[180 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<bound method NDFrame.head of                                       attachments_json          metadata\n",
-       "0    [\\n {\\n  \"type\": \"text\",\\n  \"content\": \" What ...    {\\n \"id\": 1\\n}\n",
-       "1    [\\n {\\n  \"type\": \"text\",\\n  \"content\": \" What ...    {\\n \"id\": 2\\n}\n",
-       "2    [\\n {\\n  \"type\": \"text\",\\n  \"content\": \" What ...    {\\n \"id\": 3\\n}\n",
-       "3    [\\n {\\n  \"type\": \"text\",\\n  \"content\": \"What i...    {\\n \"id\": 4\\n}\n",
-       "4    [\\n {\\n  \"type\": \"text\",\\n  \"content\": \"What i...    {\\n \"id\": 5\\n}\n",
-       "..                                                 ...               ...\n",
-       "369  [\\n {\\n  \"type\": \"text\",\\n  \"content\": \" How d...  {\\n \"id\": 370\\n}\n",
-       "370  [\\n {\\n  \"type\": \"text\",\\n  \"content\": \" What ...  {\\n \"id\": 371\\n}\n",
-       "371  [\\n {\\n  \"type\": \"text\",\\n  \"content\": \" What ...  {\\n \"id\": 372\\n}\n",
-       "372  [\\n {\\n  \"type\": \"text\",\\n  \"content\": \" How d...  {\\n \"id\": 373\\n}\n",
-       "373  [\\n {\\n  \"type\": \"text\",\\n  \"content\": \" What ...  {\\n \"id\": 374\\n}\n",
-       "\n",
-       "[374 rows x 2 columns]>"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rlhf_data.head"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_data.to_csv(\"test_upload_ranking.csv\", index = False)"
    ]
   },
   {
@@ -767,33 +718,6 @@
    "source": [
     "rlhf_data.to_csv(\"ScaleRLHF_Keywords_Set1.csv\", index = False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "374"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(rlhf_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -815,7 +739,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.9.15"
   },
   "orig_nbformat": 4
  },
