final data for google docs and scale

--- a/data_prep/ECE_students/FULL_COVERAGE_LUMETTA/student_googledoc_to_json.ipynb
+++ b/data_prep/ECE_students/FULL_COVERAGE_LUMETTA/student_googledoc_to_json.ipynb
@@ -1514,6 +1514,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# write to csv\n",
+    "df.to_json('v2_full_coverage_lumetta_COMPLETE.json')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
